--- a/src/components/layouts/header/Header.styles.scss
+++ b/src/components/layouts/header/Header.styles.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #26B9A7;
+    align-items: center;
 }
 
 .logo-and-text  {
@@ -27,6 +28,11 @@
     margin-left: 0.5rem;
 }
 
+.header-search {
+    width: 45vw;
+    
+}
+
 .user-authenticate{
     display: flex;
     align-items: center;
@@ -41,6 +47,10 @@
 
 @media (max-width: 700px) {
     .logo-name {
+        display: none;
+    }
+
+    .header-search {
         display: none;
     }
 }
