--- a/src/components/layouts/header/Header.styles.scss
+++ b/src/components/layouts/header/Header.styles.scss
@@ -30,6 +30,7 @@
     color: #26B9A7;
     font-size: 1rem;
     margin-left: 0.5rem;
+    
 }
 
 .header-search {
@@ -72,3 +73,6 @@
     border: 1px solid #26B9A7 !important;
 }
 
+.logo-and-text:hover {
+    text-decoration: none;
+}
