Starting info design

--- a/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
@@ -6,8 +6,10 @@
 
 .movie-detail-info-left {
     background-color: blue;
+    width: 25%;
 }
 
 .movie-detail-info-right {
     background-color: pink;
+    width: 25%
 }
