Add basic info section

--- a/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
@@ -5,11 +5,12 @@
 }
 
 .movie-detail-info-left {
-    background-color: blue;
-    width: 25%;
+    background-color: white;
+    width: 75%;
+    
 }
 
 .movie-detail-info-right {
-    background-color: pink;
+    background-color: #F1F1F1;
     width: 25%
 }
