--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
       font-family: 'Source Sans Pro', sans-serif;
+      box-sizing: border-box;
+}
+
+li {
+      list-style: none;
+}
+
+a {
+      text-emphasis: none;
 }
