--- a/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoRight/MovieDetailInfoRightstyles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoRight/MovieDetailInfoRightstyles.scss
@@ -1,15 +1,37 @@
 .MovieDetailInfoRight {
-    text-align: center;
+    text-align: left;
+    margin-left: 2rem;
 
 
 
     .social-icons {
         font-size: 2rem;
+        margin: 1rem 0;
+           
         
         
     }
 
     .social-icons > *  {
-        margin: 0 0.5rem;
+        margin: 0 0.2rem;
     }
+
+    
+    .right-info-item {
+
+        margin-top: 1.5rem;;
+        
+        h5 {
+            font-weight: bold;
+            color: rgb(29, 15, 15);
+        }
+        
+        h6 {
+            color: rgb(5, 3, 3);
+        }
+    }    
 }
+
+    
+
+
