--- a/src/components/movies/movieNavBar/MovieNavigationBar.style.scss
+++ b/src/components/movies/movieNavBar/MovieNavigationBar.style.scss
@@ -1,16 +1,18 @@
 .Movie-navigation {
-    background-color: #26b9a7;
+    background-color: rgb(8,28,36);
     color: white;
-    height: 3.5rem;
+    height: 5rem;
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
     padding: 0 5rem;
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: bold;
+    letter-spacing: 0.2rem;
     flex-wrap: none;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    padding-top: 1rem;
 
+    
 }
 
 .dropdown-container {
@@ -23,7 +25,7 @@
 .dropdown-hidden-container {
     display: none;
     position: absolute;
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: normal;
     color: lightgray;
     
@@ -53,4 +55,12 @@
 .dropdown-hidden-item:hover {
     color: white;
     
+}
+
+.nav-button {
+    color: white;
+}
+
+.nav-button:hover {
+       color: #d6cbf4;
 }
