--- a/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
+++ b/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
@@ -1,6 +1,21 @@
 .Movie-category-detail-page {
-    margin-top: 3.5rem;
     display: flex;
+    flex-direction: column;
+    
+}
+
+.movie-category-detail-title {
+    margin-top: 5rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding-left: 3rem;
+    
+}
+
+.Movie-category-detail-page-content {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;   
 }
