--- a/src/components/movies/actorCard/ActorCard.styles.scss
+++ b/src/components/movies/actorCard/ActorCard.styles.scss
@@ -4,17 +4,21 @@
     border: 1px solid #e3e3e3;
     padding-bottom: 1rem;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    margin: 1rem;
+    margin: 1rem 0.5rem;
 
     .actor-card-description {
         padding-top: 1rem;
 
         .actor-card-name {
             font-weight: bold;
+            text-align: left;
+            padding-left: 0.5rem;
+            margin-bottom: 0;
         }
 
         .actor-card-role {
-
+            text-align: left;
+            padding-left: 0.5rem;
         }
     }
     
