--- a/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
@@ -1,7 +1,7 @@
 .Movie-detail-info {
-    height: 100vh;
-    background-color: red;
     display:flex;   
+    padding-bottom: 5rem;
+
 }
 
 .movie-detail-info-left {
