--- a/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoRight/MovieDetailInfoRightstyles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoRight/MovieDetailInfoRightstyles.scss
@@ -1,6 +1,7 @@
 .MovieDetailInfoRight {
     text-align: left;
     margin-left: 2rem;
+    padding-bottom: 5rem;
 
 
 
@@ -18,18 +19,30 @@
 
     
     .right-info-item {
-
         margin-top: 1.5rem;;
-        
         h5 {
             font-weight: bold;
             color: rgb(29, 15, 15);
         }
-        
+    
         h6 {
             color: rgb(5, 3, 3);
         }
     }    
+
+    .button-holder {
+        padding-left: 0;
+
+        .custom-button {
+            padding: 4px 10px;
+            font-size: 0.9rem;
+            margin-right: 0.5rem;
+            margin-top: 0.5rem;
+            border: 1px solid rgb(158, 158, 0);
+            border-radius: 4px;
+    }
+    }
+    
 }
 
     
