Chnage styles and starting to implement search reudx setting up

--- a/src/components/movies/movieCategoryDetailCard/MovieCategoryDetailCard.styles.scss
+++ b/src/components/movies/movieCategoryDetailCard/MovieCategoryDetailCard.styles.scss
@@ -4,6 +4,7 @@
     display: flex;
     box-shadow: rgba(0,0,0,0.1) 0px 2px 8px 0px;
     margin: 1rem;
+    cursor: pointer;
 
 
     .category-detail-card-image {
