--- a/src/components/movies/movieNavBar/MovieNavigationBar.style.scss
+++ b/src/components/movies/movieNavBar/MovieNavigationBar.style.scss
@@ -11,9 +11,7 @@
     flex-wrap: none;
     font-size: 1rem;
     padding-top: 1rem;
-    margin-top: 3.5rem;
-
-    
+    margin-top: 3.5rem;    
 }
 
 .dropdown-container {
@@ -35,6 +33,7 @@
 .dropdown-hidden-item {
     width: max-content;
     margin-left: 1rem;
+    color: lightgray;
     
 }
 
