--- a/src/components/commonComponent/VideoDetailHeader/VideoDetailHeader.styles.scss
+++ b/src/components/commonComponent/VideoDetailHeader/VideoDetailHeader.styles.scss
@@ -1,75 +1,64 @@
 .Movie-detail-header::before {
-    content: '';
-    display: block;
-    background: radial-gradient(#000000, #545454);
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;;
-    bottom: 0;
-    opacity: 0.9;
-    z-index: 0;
-    
+  content: "";
+  display: block;
+  background: radial-gradient(#000000, #545454);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.9;
+  z-index: 0;
 }
 
 .Movie-detail-header {
-    height: 530px;
-    position: relative;
-    background-position: center;
-    background-size: cover;
+  position: relative;
+  background-position: center;
+  background-size: cover;
 }
 
-
 .Movie-detail-header > * {
-    z-index: 999;
-    position: relative;
+  z-index: 999;
+  position: relative;
 }
 // sass style
 .movie-detail-header-summary {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    padding: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 40px;
 
-    .movie-detail-header-movie-poster {
-        
+  .movie-detail-header-movie-poster {
+  }
+
+  .movie-detail-header-info {
+    width: 700px;
+    padding-left: 40px;
+
+    .movie-detail-header-info-title {
+      font-weight: bold;
+      font-size: 38px;
+      margin-bottom: 1rem;
     }
 
-    .movie-detail-header-info {
-        width: 700px;
-        padding-left: 40px;
-
-        .movie-detail-header-info-title{
-            font-weight: bold;
-            font-size: 38px;
-            margin-bottom: 1rem;
-        }
-
-        .movie-detail-header-info-title-year {
-            font-size: 27px;
-            color: lightgray;
-        }
-
-        .movie-detail-header-info-icons{
-            margin-bottom: 2rem;
-        }
-
-        .movie-detail-header-info-overview {
-            margin-bottom: 3em;
-
-        }
-
-
-        .movie-detail-header-info-featured-crew {
-
-
-            .featured-crew-list {
-                display: flex;
-            }
-        }
+    .movie-detail-header-info-title-year {
+      font-size: 27px;
+      color: lightgray;
     }
 
-    
+    .movie-detail-header-info-icons {
+      margin-bottom: 2rem;
+    }
+
+    .movie-detail-header-info-overview {
+      margin-bottom: 3em;
+    }
+
+    .movie-detail-header-info-featured-crew {
+      .featured-crew-list {
+        display: flex;
+      }
+    }
+  }
 }
-
