--- a/src/components/people/popularPeople/peopleCard/PeopleCard.style.scss
+++ b/src/components/people/popularPeople/peopleCard/PeopleCard.style.scss
@@ -5,6 +5,7 @@
   border: 1px solid rgb(139, 139, 139);
 
   .people-card {
+    padding: 4px 8px;
     .people-card-name {
       font-weight: bold;
       margin-bottom: 0;
@@ -12,6 +13,7 @@
 
     .people-card-credits {
       font-size: 0.8rem;
+      margin-bottom: 0;
     }
   }
 }
