Add link to popular people page heading to people detail page

--- a/src/components/people/popularPeople/peopleCard/PeopleCard.style.scss
+++ b/src/components/people/popularPeople/peopleCard/PeopleCard.style.scss
@@ -1,7 +1,7 @@
 .People-card {
   margin: 1rem;
   box-sizing: border-box;
-
+  cursor: pointer;
   width: 236px;
   border: 1px solid rgb(139, 139, 139);
 
