--- a/src/components/people/popularPeople/PopularPeople.style.scss
+++ b/src/components/people/popularPeople/PopularPeople.style.scss
@@ -1,6 +1,14 @@
 .Popular-people {
   margin: 0 auto;
   padding-left: 3rem;
+
+  .popular-people-title {
+    padding: 1rem 0 1rem 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-family: Arial;
+  }
+
   .people-container {
     display: flex;
     flex-wrap: wrap;
