Finish left and header and Added known_for cards for person detail

--- a/src/components/people/PeopleDetailPage/peopleDetailPageRight/PeopleDetailHeader/PeopleDetailHeader.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageRight/PeopleDetailHeader/PeopleDetailHeader.style.scss
@@ -6,6 +6,7 @@
   }
 
   .people-detail-right-header-biography {
+    padding-right: 10rem;
     .people-detail-right-biography-text {
       font-size: 1.5rem;
       //fix later
@@ -17,5 +18,6 @@
     margin-top: 2rem;
     padding: 0.5rem;
     text-align: center;
+    padding-right: 10rem;
   }
 }
