Fetching credit data from central state and render on person detail page

--- a/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageKnownFor/PeopleDetailKnownFor.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageKnownFor/PeopleDetailKnownFor.style.scss
@@ -1,8 +1,10 @@
 .People-detail-known-for {
-  .known-for-credits {
+  .known-for-credit-title {
     margin-top: 1.5rem;
+  }
 
-    .known-for-credit-title {
-    }
+  .known-for-cards-deck {
+    display: flex;
+    flex-wrap: wrap;
   }
 }
