--- a/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageKnownFor/peopleDetailKnownForCard/PeopleDetailKnownForCard.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageKnownFor/peopleDetailKnownForCard/PeopleDetailKnownForCard.style.scss
@@ -1,6 +1,11 @@
 .known-for-credits-card {
-  padding-right: 3px;
+  margin-right: 10px;
   width: 150px;
+
+  img {
+    border-radius: 5px;
+  }
+
   .known-for-credits-image {
     font-size: 3rem;
     background-color: rgb(180, 178, 178);
@@ -8,6 +13,7 @@
     height: 225px;
     text-align: center;
     padding-top: 90px;
+    overflow: hidden;
   }
 
   .known-for-credit-title {
