Added person link to movie detail page

--- a/src/components/commonComponent/actorCard/ActorCard.styles.scss
+++ b/src/components/commonComponent/actorCard/ActorCard.styles.scss
@@ -1,39 +1,39 @@
 .ActorCard {
-    height: 281px;
+  height: 281px;
+  width: 140px;
+  border: 1px solid #e3e3e3;
+  padding-bottom: 1rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  margin: 1rem 0.5rem;
+  cursor: pointer;
+
+  .no-image-person {
+    height: 175px;
     width: 140px;
-    border: 1px solid #e3e3e3;
-    padding-bottom: 1rem;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    margin: 1rem 0.5rem;
+    background-color: #dbdbdb;
+    font-size: 8rem;
+    text-align: center;
+    line-height: 12rem;
+    color: #b5b5b5;
+  }
 
-    .no-image-person {
-        height: 175px;
-        width: 140px;
-        background-color: #dbdbdb;
-        font-size: 8rem;
-        text-align: center;
-        line-height: 12rem;
-        color: #b5b5b5;
+  .no-image-person::before {
+    content: "";
+  }
+
+  .actor-card-description {
+    padding-top: 1rem;
+
+    .actor-card-name {
+      font-weight: bold;
+      text-align: left;
+      padding-left: 0.5rem;
+      margin-bottom: 0;
     }
 
-    .no-image-person::before {
-        content: '';
+    .actor-card-role {
+      text-align: left;
+      padding-left: 0.5rem;
     }
-
-    .actor-card-description {
-        padding-top: 1rem;
-
-        .actor-card-name {
-            font-weight: bold;
-            text-align: left;
-            padding-left: 0.5rem;
-            margin-bottom: 0;
-        }
-
-        .actor-card-role {
-            text-align: left;
-            padding-left: 0.5rem;
-        }
-    }
-    
+  }
 }
