Finish fetching youtube video

--- a/src/components/layouts/divider/HorizontalDivider.styles.scss
+++ b/src/components/layouts/divider/HorizontalDivider.styles.scss
@@ -1,5 +1,4 @@
-
 .HorizontalDivider {
-    height: 4rem;   
-    border-bottom: 1px solid lightgray;
+  height: 35px;
+  border-bottom: 1px solid lightgray;
 }
