--- a/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
@@ -1,20 +1,13 @@
 .Movie-detail-info {
-    display:flex;   
-    padding-bottom: 5rem;
-    
+  display: flex;
 }
 
 .movie-detail-info-left {
-    background-color: white;
-    width: 75%;
-    
+  background-color: white;
+  width: 75%;
 }
 
 .movie-detail-info-right {
-    background-color: #F1F1F1;
-    width: 25%;
-    
-
-  
-    
+  background-color: #f1f1f1;
+  width: 25%;
 }
