--- a/src/components/people/PeopleDetailPage/peopleDetailPageLeft/peopleDetailPageLeft.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageLeft/peopleDetailPageLeft.style.scss
@@ -10,7 +10,10 @@
   .people-detail-left-info {
     .people-detail-left-info-title {
       font-size: 1.5rem;
-      padding-bottom: 1rem;
+      margin: 1.4rem 0rem;
+      border-bottom: 1px solid rgb(155, 152, 152);
+      padding-right: 50px;
+      font-weight: bold;
     }
 
     .people-detail-left-info-item {
