--- a/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/MovieDetailInfoLeft.styles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/MovieDetailInfoLeft.styles.scss
@@ -2,6 +2,7 @@
   .section-title {
     font-weight: bold;
     font-size: 2rem;
+    margin-top: 2rem;
     padding-bottom: 2rem;
   }
   .top-billed-cast {
