--- a/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/MovieDetailInfoLeft.styles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/MovieDetailInfoLeft.styles.scss
@@ -6,11 +6,13 @@
     padding-bottom: 2rem;
   }
   .top-billed-cast {
-    margin: 1rem 2rem;
+    margin: 1rem 2rem 0 2rem;
   }
 
   .actor-card-container {
     display: flex;
+    text-align: center;
+    justify-content: center;
     margin-bottom: 2rem;
   }
 
@@ -18,9 +20,16 @@
     font-size: 1.5rem;
     color: #1b8a6b;
     margin: 0 2rem;
+    text-align: center;
+    transition: color 0.5s;
+  }
+
+  .full-cast-link:hover {
+    cursor: pointer;
+    color: #034734;
   }
 
   .media-container {
-    margin: 1rem 2rem 0 2rem;
+    margin: 0rem 2rem 0 2rem;
   }
 }
