Change movie info style - runtime error, and logo padding

--- a/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/movieRecommend/MovieRecomment.style.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/movieRecommend/MovieRecomment.style.scss
@@ -26,6 +26,9 @@
     .react-multiple-carousel__arrow:hover {
       background: pink;
     }
+
+    .react-multi-carousel-dot {
+    }
   }
 
   .carousel-items {
