--- a/src/components/people/popularPeople/peopleCard/PeopleCard.style.scss
+++ b/src/components/people/popularPeople/peopleCard/PeopleCard.style.scss
@@ -6,9 +6,17 @@
   border: 1px solid rgb(139, 139, 139);
 
   .people-card-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+    height: 236px;
     overflow: hidden;
+    font-size: 10rem;
+    border-bottom: 1px solid darkgray;
+    background-color: rgb(197, 194, 194);
   }
+
   .people-card {
     padding: 4px 8px;
   }
