--- a/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/movieRecommend/MovieRecomment.style.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/movieRecommend/MovieRecomment.style.scss
@@ -1,5 +1,5 @@
 .Movie-recommend {
-  background-color: #d6f7f5;
+  background-color: #d6f8df;
   width: 100%;
 
   .Movie-recommend-title {
@@ -12,7 +12,7 @@
   }
 
   .carousel-container {
-    background-color: #d6f7f5;
+    background-color: #d6f8df;
     text-align: center;
     padding-bottom: 4rem;
 
