--- a/src/components/layouts/footer/Footer.styles.scss
+++ b/src/components/layouts/footer/Footer.styles.scss
@@ -1,5 +1,5 @@
 .Footer {
-  background-image: linear-gradient(#053831, #072025);
+  background-image: linear-gradient(#85eea1, #072025);
   color: white;
   width: 100%;
 
