--- a/src/components/people/PeopleDetailPage/peopleDetailPageLeft/peopleDetailPageLeft.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageLeft/peopleDetailPageLeft.style.scss
@@ -1,6 +1,7 @@
 .People-detail-page-left {
   background: #f1f1f1;
   width: 450px;
+  height: 100%;
 
   .people-detail-left-image {
     padding-left: 2rem;
