--- a/src/components/movies/movieCard/MovieCard.styles.scss
+++ b/src/components/movies/movieCard/MovieCard.styles.scss
@@ -1,3 +1,12 @@
-.movieCard {
+.Card {
+  .movieCard {
     cursor: pointer;
+    background-color: rgb(36, 105, 36);
+    text-align: center;
+    color: linen;
+  }
+}
+
+.card {
+  border: 0 !important;
 }
