--- a/src/components/movies/movieCategory/MovieCategory.styles.scss
+++ b/src/components/movies/movieCategory/MovieCategory.styles.scss
@@ -1,17 +1,17 @@
 .Moive-category {
-    display: flex;
+  display: flex;
 }
 
 .category-title {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 600;
-    font-size: 1.5rem;
-    margin: 1rem 0 1.5rem 0;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin: 1rem 0 1.5rem 0;
 }
 
 .card-deck {
-    padding-bottom: 5rem;
-    border-bottom: 4px solid #e3e3e3;
-    
+  padding-bottom: 5rem;
+  border-bottom: 4px solid #e3e3e3;
+  display: flex;
+  flex-direction: row !important;
 }
-
