--- a/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageFilmography/PeopleDetailFilmographyTable/PeopleDetailFilmographyTable.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageFilmography/PeopleDetailFilmographyTable/PeopleDetailFilmographyTable.style.scss
@@ -1,16 +1,22 @@
+.Video-Title {
+  margin: 2.5rem 0;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
 .People-Detail-Filmography-Table {
   width: 500px;
   border: 1px solid lightgray;
   border-collapse: collapse;
-  -webkit-box-shadow: 11px 12px 21px -5px rgba(106, 224, 38, 0.49);
-  -moz-box-shadow: 11px 12px 21px -5px rgba(106, 224, 38, 0.49);
-  box-shadow: 11px 12px 21px -5px rgba(106, 224, 38, 0.49);
+  -webkit-box-shadow: 16px 22px 17px -17px rgba(19, 107, 10, 1);
+  -moz-box-shadow: 16px 22px 17px -17px rgba(19, 107, 10, 1);
+  box-shadow: 16px 22px 17px -17px rgba(19, 107, 10, 1);
 
   caption {
     padding-top: 5rem;
   }
   thead {
-    background-color: lightgreen;
+    background-color: rgb(35, 71, 35);
   }
 
   th,
@@ -18,14 +24,19 @@
     padding: 10px 20px;
   }
 
+  th {
+    color: white;
+  }
+
   td {
-    border-bottom: 1px solid lightgreen;
+    border-bottom: 1px solid rgb(9, 59, 9);
 
     .title {
       font-size: 1.1rem;
       font-weight: bold;
       cursor: pointer;
       transition: color 0.1s ease-in-out;
+      color: rgb(63, 97, 78);
     }
 
     .title:hover {
