--- a/src/components/movies/movieCard/MovieCard.styles.scss
+++ b/src/components/movies/movieCard/MovieCard.styles.scss
@@ -1,9 +1,21 @@
 .Card {
+  margin: 0 0.3rem;
+
   .movieCard {
+    height: 100%;
     cursor: pointer;
-    background-color: rgb(36, 105, 36);
+    background-color: rgb(17, 83, 17);
+    display: flex;
+    flex-direction: column;
+    color: rgb(6, 61, 4);
+    line-height: 1rem;
+    padding: 2px;
+  }
+
+  .card-title {
+    color: rgb(205, 252, 217);
     text-align: center;
-    color: linen;
+    padding-top: 0.5rem;
   }
 }
 
