--- a/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
+++ b/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 5rem;
+  background-color: rgb(247, 255, 249);
 }
 
 .movie-category-detail-title {
