--- a/src/components/movies/movieCategoryDetailCard/MovieCategoryDetailCard.styles.scss
+++ b/src/components/movies/movieCategoryDetailCard/MovieCategoryDetailCard.styles.scss
@@ -1,62 +1,49 @@
 .Movie-category-detail-card {
+  width: 483px;
+  display: flex;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px 0px;
+  margin: 1rem;
+  cursor: pointer;
+  border: 1px solid rgb(182, 236, 182);
 
-    width: 483px;
-    display: flex;
-    box-shadow: rgba(0,0,0,0.1) 0px 2px 8px 0px;
-    margin: 1rem;
-    cursor: pointer;
+  .category-detail-card-image {
+  }
 
+  .category-detail-card-content {
+    width: 298px;
+    height: 278px;
+    box-sizing: border-box;
+    padding: 16px;
+    position: relative;
+    background-color: white;
 
-    .category-detail-card-image {
-        
+    .category-detail-card-header {
+      .category-detail-card-title {
+        font-weight: bold;
+        font-size: 17.6px;
+      }
+
+      .category-detail-card-release-date {
+        color: rgba(0, 0, 0, 0.6);
+        font-size: 16px;
+      }
     }
 
-    .category-detail-card-content {
-
-        width: 298px;
-        height: 278px;
-        box-sizing: border-box;
-        padding: 16px;
-        position: relative;
-
-
-
-
-        .category-detail-card-header {
-
-
-
-            .category-detail-card-title {
-                            font-weight: bold;
-                            font-size: 17.6px;
-            }
-
-            .category-detail-card-release-date {
-                color: rgba(0,0,0,0.6);
-                font-size: 16px;
-            }
-        }
-
-
-
-        .category-detail-card-stroy {
-            margin-top: 20px;
-            color: rgb(77,77,77);
-            font-size: 14.4px;
-            line-height: 1rem;
-
-        }
-
-
-        .category-detail-card-footer {
-            border-top: 1px solid rgb(227,227,227);
-            box-sizing: border-box;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            padding: 16px;
-        }
+    .category-detail-card-stroy {
+      margin-top: 20px;
+      color: rgb(77, 77, 77);
+      font-size: 14.4px;
+      line-height: 1rem;
     }
+
+    .category-detail-card-footer {
+      border-top: 1px solid rgb(227, 227, 227);
+      box-sizing: border-box;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      padding: 16px;
+    }
+  }
 }
-
