Finish up popular people paginate

--- a/src/components/people/popularPeople/PopularPeople.style.scss
+++ b/src/components/people/popularPeople/PopularPeople.style.scss
@@ -9,6 +9,12 @@
     font-family: Arial;
   }
 
+  .popular-people-paginate-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .people-container {
     display: flex;
     flex-wrap: wrap;
