render crew and cast data to full cast page"

--- a/src/components/people/peopleCastForShow/PeopleCastforShow.style.scss
+++ b/src/components/people/peopleCastForShow/PeopleCastforShow.style.scss
@@ -1,2 +1,15 @@
 .People-Cast-For-Show {
+  .grid-item {
+    .image-container {
+    }
+
+    .no-image {
+      background-color: rgb(173, 173, 173);
+      width: 138px;
+      height: 175px;
+      font-size: 7rem;
+      text-align: center;
+      color: rgb(92, 91, 94);
+    }
+  }
 }
