--- a/src/components/commonComponent/actorCard/ActorCard.styles.scss
+++ b/src/components/commonComponent/actorCard/ActorCard.styles.scss
@@ -5,6 +5,12 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   margin: 1rem 0.5rem;
   cursor: pointer;
+  transform: scale(1);
+  transition: transform 0.05s linear;
+
+  &:hover {
+    transform: scale(1.2);
+  }
 
   .no-image-person {
     height: 175px;
