--- a/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
+++ b/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
@@ -16,6 +16,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   padding-left: 3rem;
+  color: rgb(9, 116, 9);
 }
 
 .Movie-category-detail-page-content {
