Implementing grid style for main page card deck

--- a/src/components/movies/movieCard/MovieCard.styles.scss
+++ b/src/components/movies/movieCard/MovieCard.styles.scss
@@ -1,5 +1,4 @@
 .Card {
-  width: 271px;
   margin: 0 0.3rem;
   position: relative;
 
@@ -14,6 +13,7 @@
     padding: 2px;
 
     .movie-image-container {
+      width: 100%;
       position: relative;
 
       .movieCard-overlay {
