--- a/src/components/layouts/footer/Footer.styles.scss
+++ b/src/components/layouts/footer/Footer.styles.scss
@@ -3,10 +3,9 @@
   color: white;
   width: 100%;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
   padding: 5rem 0;
 }
 
@@ -17,9 +16,10 @@
 }
 
 .cards {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-items: center;
 }
 
 .card {
