--- a/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageFilmography/PeopleDetailFilmographyTable/PeopleDetailFilmographyTable.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageFilmography/PeopleDetailFilmographyTable/PeopleDetailFilmographyTable.style.scss
@@ -5,7 +5,7 @@
 }
 
 .People-Detail-Filmography-Table {
-  width: 500px;
+  width: 80%;
   border: 1px solid lightgray;
   border-collapse: collapse;
   -webkit-box-shadow: 16px 22px 17px -17px rgba(19, 107, 10, 1);
