--- a/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageKnownFor/PeopleDetailKnownFor.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageKnownFor/PeopleDetailKnownFor.style.scss
@@ -4,7 +4,8 @@
   }
 
   .known-for-cards-deck {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-gap: 3px;
   }
 }
