--- a/src/components/people/popularPeople/PopularPeople.style.scss
+++ b/src/components/people/popularPeople/PopularPeople.style.scss
@@ -1,12 +1,12 @@
 .Popular-people {
   margin: 0 auto;
-  padding-left: 3rem;
 
   .popular-people-title {
     padding: 1rem 0 1rem 1rem;
     font-size: 1.5rem;
     font-weight: 600;
     font-family: Arial;
+    padding-left: 1rem;
   }
 
   .popular-people-paginate-container {
@@ -16,7 +16,9 @@
   }
 
   .people-container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
+    justify-items: center;
+    grid-gap: 10px;
   }
 }
