--- a/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageKnownFor/PeopleDetailKnownFor.style.scss
+++ b/src/components/people/PeopleDetailPage/peopleDetailPageRight/peopleDetailPageMainBody/peopleDetailPageKnownFor/PeopleDetailKnownFor.style.scss
@@ -7,5 +7,6 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-gap: 3px;
+    padding: 1rem;
   }
 }
