--- a/src/components/people/peopleCastForShow/PeopleCastforShow.style.scss
+++ b/src/components/people/peopleCastForShow/PeopleCastforShow.style.scss
@@ -1,23 +1,26 @@
 .People-Cast-For-Show {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(468px, 1fr));
+  padding: 2rem;
 
   .People-cast-container {
     margin: 1rem;
-    width: 500px;
+
     .full-cast-role-title {
       font-size: 1.5rem;
+      padding-left: 2rem;
+      font-weight: bold;
       .full-cast-number {
-        color: gray;
+        color: rgb(114, 113, 113);
       }
     }
 
     .credit-container {
       color: green;
       margin: 1rem;
-      padding: 1rem;
+      padding: 0.5rem;
       .grid-items {
-        background-color: rgb(148, 223, 198);
+        background-color: rgb(213, 243, 233);
         padding: 0.4rem 0rem 1.3rem 0;
         border-radius: 10px;
         display: flex;
@@ -26,7 +29,7 @@
         align-items: center;
         .individual-item {
           background-color: rgb(255, 255, 255);
-          width: 80%;
+          width: 95%;
           margin-top: 1rem;
           padding: 1rem 0;
           border: 1px solid #b6ecb6;
@@ -67,5 +70,10 @@
         padding: 1rem 2rem !important;
       }
     }
+  }
+}
+
+@media (max-width: 970px) {
+  .People-Cast-For-Show {
   }
 }
