--- a/src/components/layouts/footer/Footer.styles.scss
+++ b/src/components/layouts/footer/Footer.styles.scss
@@ -2,11 +2,7 @@
   background-image: linear-gradient(#85eea1, #072025);
   color: white;
   width: 100%;
-
-  // flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
-  padding: 5rem 0;
+  padding: 5rem 1rem;
 }
 
 .footerTitle {
@@ -18,19 +14,18 @@
 .cards {
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  justify-items: center;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-gap: 10px;
 }
 
 .card {
-  width: 300px;
-  margin: 0 30px;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: white;
   padding-bottom: 2rem;
-  margin-bottom: 3rem;
+
   border-radius: 5px;
 }
 .cardTitle {
@@ -43,7 +38,6 @@
 
 .cardChips {
   display: flex;
-
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -72,11 +66,20 @@
 
 .link {
   cursor: pointer;
-  margin: 0.1rem;
+  height: 1.2rem;
+  width: 100%;
+  margin: 0.5rem;
   transition: all 0.5s ease;
+  color: green;
 }
 
 .link:hover {
-  color: rgb(108, 65, 160);
+  color: rgb(5, 43, 24);
   font-size: 1.1rem;
+}
+
+@media (max-width: 800px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
 }
