--- a/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
+++ b/src/components/movies/movieCategoryDetail/MovieCategoryDetailPage.style.scss
@@ -1,6 +1,4 @@
 .Movie-category-detail-page {
-  display: flex;
-  flex-direction: column;
   padding-bottom: 5rem;
   background-color: rgb(247, 255, 249);
 
@@ -21,10 +19,11 @@
 
 .Movie-category-detail-page-content {
   margin-top: 1rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  justify-items: center;
+  padding: 0.5rem;
 }
 
 @media (max-width: 1200px) {
@@ -36,5 +35,17 @@
 @media (max-width: 826px) {
   .movie-category-detail-title {
     margin-top: 7rem;
+  }
+}
+
+@media (max-width: 1079px) {
+  .Movie-category-detail-page-content {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 1036px) {
+  .Movie-category-detail-page-content {
+    grid-template-columns: 1fr;
   }
 }
