Make movie detail as responsive

--- a/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/MovieDetailInfoLeft.styles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/movieDetailInfoLeft/MovieDetailInfoLeft.styles.scss
@@ -17,8 +17,9 @@
     grid-gap: 5px;
     margin-bottom: 2rem;
     justify-items: center;
-    margin: 0 auto;
+
     grid-gap: 10px;
+    width: 100%;
   }
 
   .full-cast-link {
