--- a/src/components/commonComponent/actorCard/ActorCard.styles.scss
+++ b/src/components/commonComponent/actorCard/ActorCard.styles.scss
@@ -1,9 +1,9 @@
 .ActorCard {
   border: 1px solid #e3e3e3;
-  padding-bottom: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  margin: 1rem 0.5rem;
 
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+
+  width: 100%;
   cursor: pointer;
   transform: scale(1);
   transition: transform 0.05s linear;
