--- a/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
+++ b/src/components/movies/movieDetailPage/movieDetailInfo/MovieDetailInfo.styles.scss
@@ -1,19 +1,30 @@
 .Movie-detail-info {
-  display: flex;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
 }
 
 .movie-detail-info-left {
   background-color: white;
-  width: 75%;
+  width: 75vw;
 }
 
 .movie-detail-info-right {
   background-color: #f1f1f1;
-  width: 25%;
+  width: 25vw;
+  order: 1;
 }
 
-@media (max-width: 950px) {
+@media (max-width: 985px) {
   .Movie-detail-info {
-    display: grid;
+    display: block;
+  }
+
+  .movie-detail-info-left {
+    width: 100vw;
+  }
+
+  .movie-detail-info-right {
+    width: 100vw;
   }
 }
